Fix a few bugs. (#1187)
- The slide-in sidenav used on mobile went all crazy when text got too long in the expanded
panel. We now set a max width to trigger controlled wrapping and avoid the nasties.

- The hamburger menu that replaces the link in the top header on small screens didn't render
right on medium-sized screens (a.k.a. portrait-mode tablets). I had one of my breakpoints set
inconsistently.

- Dynamically loaded PRE blocks were not being syntax colored, now they are.

- The Links endnote section created for printing pages was not dedupping identical
links.

- The Links endnote section contained entries for the next/previous links which are
normally at the bottom of each page. These links aren't visible when printing and so
shouldn't appear in the Links endnote section.

--- a/_sass/modules/_sidebar.scss
+++ b/_sass/modules/_sidebar.scss
@@ -4,6 +4,7 @@
         z-index: 42;
         left: -1500px;
         width: auto;
+        max-width: 80%;
         top: $headerHeight;
         position: absolute;
     }
